add Blueprint folder

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Fighting_Demo.Fighting_DemoGameMode
+GlobalDefaultGameMode=/Game/BP_FIghting_Mode.BP_FIghting_Mode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
