Add Content and config Folder

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/BP_FIghting_Mode.BP_FIghting_Mode_C
+GlobalDefaultGameMode=/Game/BP_FightingGameMode.BP_FightingGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -27,5 +27,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_SideScroller",NewGameName="/Script/Fighting_Demo")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_SideScroller",NewGameName="/Script/Fighting_Demo")
 +ActiveClassRedirects=(OldClassName="TP_SideScrollerGameMode",NewClassName="Fighting_DemoGameMode")
-+ActiveClassRedirects=(OldClassName="TP_SideScrollerCharacter",NewClassName="Fighting_DemoCharacter")
++ActiveClassRedirects=(OldClassName="TP_SideScrollerCharacter",NewClassName="FighterTemplateCharacter")
 
